Alignment of pictures fixed

--- a/web/css/colorbox.css
+++ b/web/css/colorbox.css
@@ -40,12 +40,12 @@
         .cboxSlideshow_off #cboxSlideshow{background-position:-100px 0px; right:44px;}
         .cboxSlideshow_off #cboxSlideshow.hover{background-position:-75px -25px;}
 
-.thumbnail { float: right; margin: 0px 13px 13px 0px; height: 160px; width:160px; }
+.thumbnail { float:left; margin: 0px 13px 13px 0px; height: 160px; width:160px; }
 .thumbnail_image { height: 150px; width:150px; }
 .thumbnail_caption { font-size: 11px; text-align: center; font-weight: bold; }
 a.cboxElement:link,
 a.cboxElement:visited,
 a.cboxElement:hover,
-a.cboxElement:focus { padding: 0px; margin: 0px; text-decoration: none; display: inline; }
+a.cboxElement:focus { padding: 0px; margin: 0px; text-decoration: none; }
 a.cboxElement:hover { background: transparent; }
-a.cboxElement img { vertical-align: top; display: inline; }
+a.cboxElement img { vertical-align: top; }
