--- a/web/css/main.css
+++ b/web/css/main.css
@@ -256,10 +256,10 @@ div.javascript_disabled_notification p {
 }
 
 #main_view { margin-bottom: 24px; }
-#main_view_show {  }
+#main_view_show { }
 #object_data_list { float:left; margin-left: 13px; margin-bottom: 24px; }
 #object_google_map { float: right; margin-right: 21px; }
-#object_picture_list { float: left; clear: left; margin-left: 13px; }
+#object_picture_list { float: left; margin-left: 13px; width: 750px; }
 
 
 /**
